# zkEVM1

./: .gitmodules  CMakeLists.txt
include/evmone/: advanced_analysis.hpp  baseline.hpp  baseline_instruction_table.hpp  execution_state.hpp  instructions.hpp  tracing.hpp
include/evmone/precompiles/: ecc.hpp  secp256k1.hpp
lib/evmone/: CMakeLists.txt  advanced_instructions.cpp  baseline.cpp  eof.cpp  eof.hpp  execution_state.hpp  instructions.hpp  instructions_calls.cpp  instructions_traits.hpp
libs/: CMakeLists.txt
libs/evmone/: CMakeLists.txt  advanced_analysis.hpp  advanced_execution.hpp  eof.hpp  execution_state.hpp  tracing.cpp  tracing.hpp  vm.cpp  vm.hpp
libs/evmone_precompiles/: CMakeLists.txt  secp256k1.hpp
src/: CMakeLists.txt
src/evmmax/: CMakeLists.txt  evmmax.cpp
src/evmone/: CMakeLists.txt  advanced_analysis.cpp  advanced_execution.cpp  advanced_instructions.cpp  baseline.cpp  baseline_instruction_table.cpp  eof.cpp  instructions_calls.cpp  instructions_storage.cpp  tracing.cpp  vm.cpp
src/precompiles/: CMakeLists.txt  bn254.cpp  secp256k1.cpp
test/: CMakeLists.txt
test/eofparse/: eofparse.cpp
test/eofparsefuzz/: eofparsefuzz.cpp
test/state/: host.cpp  state.cpp  state.hpp
test/statetest/: statetest_loader.cpp
test/unittests/: eof_validation_test.cpp  evm_eof_test.cpp  instructions_test.cpp  statetest_loader_tx_test.cpp
test/utils/: bytecode.hpp
